# Copyright (C) 2017 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../gn/dejaview.gni")
import("../../../gn/proto_library.gni")

# The core config protos, without the [lazy = true] imports pulled by
# data_source_config.proto.

dejaview_proto_library("@TYPE@") {
  deps = [
    "../common:@TYPE@",
    "inode_file:@TYPE@",
    "interceptors:@TYPE@",
    "process_stats:@TYPE@",
    "sys_stats:@TYPE@",
    "system_info:@TYPE@",
    "track_event:@TYPE@",
  ]

  sources = [
    "data_source_config.proto",
    "interceptor_config.proto",
    "stress_test_config.proto",
    "test_config.proto",
    "trace_config.proto",
  ]
}

dejaview_proto_library("descriptor") {
  proto_generators = [ "descriptor" ]
  generate_descriptor = "config.descriptor"
  link_deps = [ ":source_set" ]
  sources = [ "trace_config.proto" ]
}
