# Copyright (C) 2019 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../gn/test.gni")

assert(enable_dejaview_trace_processor_sqlite)

source_set("sqlite") {
  sources = [
    "db_sqlite_table.cc",
    "db_sqlite_table.h",
    "module_lifecycle_manager.h",
    "scoped_db.h",
    "sql_source.cc",
    "sql_source.h",
    "sql_stats_table.cc",
    "sql_stats_table.h",
    "sqlite_engine.cc",
    "sqlite_engine.h",
    "sqlite_utils.cc",
    "sqlite_utils.h",
    "stats_table.cc",
    "stats_table.h",
  ]
  deps = [
    "..:metatrace",
    "../../../gn:default_deps",
    "../../../gn:sqlite",
    "../../../include/dejaview/trace_processor",
    "../../../include/dejaview/trace_processor:basic_types",
    "../../../protos/dejaview/trace_processor:zero",
    "../../base",
    "../containers",
    "../db",
    "../db/column",
    "../importers/common",
    "../dejaview_sql/intrinsics/table_functions:interface",
    "../storage",
    "../types",
    "../util",
    "../util:regex",
  ]
  public_deps = [ "bindings" ]
}

dejaview_unittest_source_set("unittests") {
  testonly = true
  sources = [
    "db_sqlite_table_unittest.cc",
    "sql_source_unittest.cc",
    "sqlite_utils_unittest.cc",
  ]
  deps = [
    ":sqlite",
    "../../../gn:default_deps",
    "../../../gn:gtest_and_gmock",
    "../../../gn:sqlite",
    "../../../include/dejaview/trace_processor:basic_types",
    "../../base",
    "../../base:test_support",
    "../db",
  ]
}

if (enable_dejaview_benchmarks) {
  source_set("benchmarks") {
    testonly = true
    deps = [
      ":sqlite",
      "../../../gn:benchmark",
      "../../../gn:default_deps",
      "../../../gn:sqlite",
      "../../base",
    ]
    sources = [ "sqlite_vtable_benchmark.cc" ]
  }
}
