# Copyright (C) 2022 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../../gn/test.gni")

source_set("minimal") {
  sources = [ "fuchsia_trace_utils.h" ]
  deps = [
    ":fuchsia_record",
    "../../../../gn:default_deps",
    "../../../../include/dejaview/trace_processor:storage",
    "../../../base",
    "../../storage",
  ]
}

source_set("full") {
  sources = [
    "fuchsia_trace_parser.cc",
    "fuchsia_trace_parser.h",
    "fuchsia_trace_tokenizer.cc",
    "fuchsia_trace_tokenizer.h",
    "fuchsia_trace_utils.cc",
  ]
  deps = [
    ":fuchsia_record",
    ":minimal",
    "../../../../gn:default_deps",
    "../../sorter",
    "../../storage",
    "../../tables",
    "../../types",
    "../../util:trace_type",
    "../common",
    "../proto:minimal",
  ]
}

source_set("fuchsia_record") {
  sources = [
    "fuchsia_record.cc",
    "fuchsia_record.h",
  ]
  deps = [
    "../../../../gn:default_deps",
    "../../../../include/dejaview/trace_processor:storage",
    "../../containers",
  ]
}

dejaview_unittest_source_set("unittests") {
  testonly = true
  sources = [
    "fuchsia_parser_unittest.cc",
    "fuchsia_trace_utils_unittest.cc",
  ]
  deps = [
    ":full",
    ":minimal",
    "../../../../gn:default_deps",
    "../../../../gn:gtest_and_gmock",
    "../../../../protos/dejaview/common:zero",
    "../../../../protos/dejaview/config:zero",
    "../../../../protos/dejaview/trace:zero",
    "../../../../protos/dejaview/trace/android:zero",
    "../../../../protos/dejaview/trace/chrome:zero",
    "../../../../protos/dejaview/trace/ftrace:zero",
    "../../../../protos/dejaview/trace/interned_data:zero",
    "../../../../protos/dejaview/trace/profiling:zero",
    "../../../../protos/dejaview/trace/ps:zero",
    "../../../../protos/dejaview/trace/sys_stats:zero",
    "../../../../protos/dejaview/trace/track_event:zero",
    "../../../protozero",
    "../../sorter",
    "../../storage",
    "../../util:descriptors",
    "../common",
    "../ftrace:full",
    "../proto:full",
    "../proto:minimal",
  ]
}
