# Copyright (C) 2018 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../../gn/test.gni")

source_set("sys_stats") {
  public_deps = [ "../../../tracing/core" ]
  deps = [
    "..:data_source",
    "../../../../gn:default_deps",
    "../../../../include/dejaview/ext/traced",
    "../../../../include/dejaview/ext/traced:sys_stats_counters",
    "../../../../protos/dejaview/common:zero",
    "../../../../protos/dejaview/config/sys_stats:zero",
    "../../../../protos/dejaview/trace:zero",
    "../../../../protos/dejaview/trace/sys_stats:zero",
    "../../../base",
    "../common",
  ]
  sources = [
    "sys_stats_data_source.cc",
    "sys_stats_data_source.h",
  ]
}

dejaview_unittest_source_set("unittests") {
  testonly = true
  deps = [
    ":sys_stats",
    "../../../../gn:default_deps",
    "../../../../gn:gtest_and_gmock",
    "../../../../protos/dejaview/config/sys_stats:cpp",
    "../../../../protos/dejaview/trace/sys_stats:cpp",
    "../../../../src/base:test_support",
    "../../../../src/tracing/test:test_support",
    "../common:test_support",
  ]
  sources = [ "sys_stats_data_source_unittest.cc" ]
}
