# Copyright 2023 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

# List the SQL files in the dejaview_sql_files.gni so the list can be
# used in Chromium targets as well.
import("dejaview_sql_files.gni")

# This file is rolled to DejaView so this relative path is intended to
# work in the DejaView repository but does not make sense here.
import("../../../../../gn/dejaview_sql.gni")
dejaview_sql_source_set("chrome_sql") {
  sources = chrome_stdlib_sql_files
}
